support inbound template generation in maven plugin